--- a/contact.html
+++ b/contact.html
@@ -160,7 +160,6 @@
               <a href=""><li>Services</li></a>
               <a href=""><li>News</li></a>
               <a href=""><li>Careers</li></a>
-              <a href=""><li>Contact</li></a>
             </ul>
           </div>
           <div>
@@ -170,11 +169,10 @@
               <a href=""><li>Services</li></a>
               <a href=""><li>News</li></a>
               <a href=""><li>Careers</li></a>
-              <a href=""><li>Contact</li></a>
             </ul>
           </div>
           <div>
-            <h4>Links</h4>
+            <h4>Contact</h4>
             <ul class="footer-list">
               <a href=""><li>43 Raymouth Rd. Baltemoer, London 3910</li></a>
               <a href=""><li>+1(123)-456-7890</li></a>
